[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/SightLines/SightLinesGuideBlack.png" type="Texture" id=1]
[ext_resource path="res://Parts/Characters/FocusDetector.gd" type="Script" id=2]
[ext_resource path="res://Textures/SightLines/SuperBigSightLines.png" type="Texture" id=3]
[ext_resource path="res://Textures/SightLines/SingleSightline.png" type="Texture" id=4]
[ext_resource path="res://Parts/Characters/Blinker.gd" type="Script" id=5]

[node name="FocusDetector" type="Position2D"]
script = ExtResource( 2 )

[node name="FocusCone" type="Light2D" parent="."]
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )
texture_scale = 0.75
mode = 3
range_item_cull_mask = 2
shadow_color = Color( 0, 0, 0, 1 )
shadow_item_cull_mask = 2

[node name="FocusCone2" type="Light2D" parent="FocusCone"]
texture = ExtResource( 3 )
texture_scale = 0.75
shadow_color = Color( 0, 0, 0, 1 )

[node name="OldFocusGuide" type="Sprite" parent="."]
visible = false
light_mask = 0
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )

[node name="Blinker" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Upper" type="Node2D" parent="Blinker"]
rotation = -0.253073

[node name="UpperSightline" type="Sprite" parent="Blinker/Upper"]
scale = Vector2( 2.5, 1 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -2 )

[node name="UpperRay" type="RayCast2D" parent="Blinker/Upper"]
cast_to = Vector2( 614, 0 )

[node name="Lower" type="Node2D" parent="Blinker"]
rotation = 0.240855

[node name="LowerSightline" type="Sprite" parent="Blinker/Lower"]
scale = Vector2( 2.5, 1 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -2 )

[node name="LowerRay" type="RayCast2D" parent="Blinker/Lower"]
enabled = true
cast_to = Vector2( 614, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2( -1, 1 )
polygon = PoolVector2Array( 8.799, 0, -614.328, 150.412, -613.5, -158.9 )

[node name="FocusConeSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="BlinkDelayTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="BlinkDelayTimer" to="." method="_on_BlinkDelayTimer_timeout"]
